--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+header{
+    padding: 20px 60px;
+    text-align: end;
+    border-bottom: 2px solid gray;
+    font-size: 22px;
+    background-color: #e2e7ea;
+}
+
